--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.24.1",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
