--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.38.0",
     "@google/generative-ai": "^0.24.1",
     "@reduxjs/toolkit": "^2.11.2",
+    "@supabase/supabase-js": "^2.98.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
